<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.d3mstudio.catalogmovie.DetailActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitXY"/>
        </FrameLayout>
        <TextView
            android:id="@+id/title"
            style="@style/TextContent.Black"
            android:textSize="32sp"
            android:text="@string/title"
            tools:text="Jumanji The Jungle"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/overview"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            android:id="@+id/overview"
            style="@style/TextContent"
            android:text="@string/content_overview"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            tools:text="Overview Text Berisi keterangan Movie titik titik. Overview Text Berisi keterangan Movie titik titik ...Overview Text Berisi keterangan Movie titik titik ...Overview Text Berisi keterangan Movie titik titik ..."
            android:textColor="@android:color/black"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/details"
            android:layout_marginBottom="2dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/time"/>
                <TextView
                    android:id="@+id/time"
                    style="@style/TextSpec.Value"
                    tools:text="Kamis, 18 November 1995"
                    android:text="@string/content_time"/>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/btn_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
