<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movies_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="?android:selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backbg"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/title"
                tools:text="Captain America"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="Overview Text Berisi keterangan Movie titik titik ..."
                android:text="@string/overview"
                android:maxLines="1"
                android:ellipsize="end"/>
            <TextView
                android:id="@+id/subtitle"
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Sabtu, Des 08 2017"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
